--- a/src/app/auth/components/login/login.component.scss
+++ b/src/app/auth/components/login/login.component.scss
@@ -36,3 +36,8 @@ td {
     font-size: 16px;
     cursor: pointer;
 }
+.btn__icon {
+    border: none;
+    background: none;
+    cursor: pointer;
+}
