--- a/src/app/main/components/players/players.component.html
+++ b/src/app/main/components/players/players.component.html
@@ -14,5 +14,5 @@
             <td [routerLink]="['./player', player.id]">{{player?.user.full_name}}</td>
         </tr>
     </table>
-    <button class="btn" [routerLink]="['./add-player', id]">Добавить игрока</button>
+    <button class="btn" [routerLink]="['./add-player', id]">Вступить в команду</button>
 </div>
