create pages: history&about-us

--- a/src/app/main/components/header/header.component.html
+++ b/src/app/main/components/header/header.component.html
@@ -7,6 +7,8 @@
         <a routerLinkActive="active" class="link" [routerLink]="['./home']">Главная</a>
         <a routerLinkActive="active" class="link" [routerLink]="['./teams']">Команды</a>
         <a routerLinkActive="active" class="link" [routerLink]="['./locations']">Места</a>
+        <a routerLinkActive="active" class="link" [routerLink]="['./history']">История</a>
+        <a routerLinkActive="active" class="link" [routerLink]="['./about-us']">О нас</a>
     </div>
 
     <div class="box">
