--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -1,19 +1,26 @@
 <div class="auth">
     <p class="auth__title">Регистрация</p>
-    <form [formGroup]="regForm" novalidate (ngSubmit)="sendService()">
+    <form [formGroup]="regForm" novalidate (ngSubmit)="checkForm()">
         <table>
             <tr>
-                <td> <span class="auth__subtitle">E-mail:</span> </td>
+                <td> <span class="auth__subtitle">Имя:</span> </td>
                 <td> 
-                    <input class="auth__input" formControlName="username"> 
-                    <span class="auth__err" *ngIf="regForm.controls['username'].invalid && regForm.controls['username'].touched">Введите e-mail!</span>
+                    <input class="auth__input" formControlName="first_name"> 
+                    <span class="auth__err" *ngIf="regForm.controls['first_name'].invalid && regForm.controls['first_name'].touched">Введите имя!</span>
                 </td>
             </tr>
             <tr>
-                <td> <span class="auth__subtitle">Придумайте пароль:</span> </td>
+                <td> <span class="auth__subtitle">Фамилия:</span> </td>
                 <td> 
-                    <input class="auth__input" formControlName="password"> 
-                    <span class="auth__err" *ngIf="regForm.controls['password'].invalid && regForm.controls['password'].touched">Придумайте пароль!</span>
+                    <input class="auth__input" formControlName="last_name"> 
+                    <span class="auth__err" *ngIf="regForm.controls['last_name'].invalid && regForm.controls['last_name'].touched">Введите фамилию!</span>
+                </td>
+            </tr>
+            <tr>
+                <td> <span class="auth__subtitle">E-mail:</span> </td>
+                <td> 
+                    <input class="auth__input" formControlName="email"> 
+                    <span class="auth__err" *ngIf="regForm.controls['email'].invalid && regForm.controls['email'].touched">Введите e-mail!</span>
                 </td>
             </tr>
             <tr>
@@ -21,6 +28,30 @@
                 <td> 
                     <input class="auth__input" formControlName="phone_number"> 
                     <span class="auth__err" *ngIf="regForm.controls['phone_number'].invalid && regForm.controls['phone_number'].touched">Введите телефон!</span>
+                </td>
+            </tr>
+            <tr>
+                <td> <span class="auth__subtitle">Придумайте пароль:</span> </td>
+                <td> 
+                    <mat-form-field appearance="fill">
+                        <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
+                        <button class="btn__icon" type="button" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        </button>
+                    </mat-form-field>
+                    <span class="auth__err" *ngIf="regForm.controls['password'].invalid && regForm.controls['password'].touched">Придумайте пароль!</span>
+                </td>
+            </tr>
+            <tr>
+                <td> <span class="auth__subtitle">Повторите пароль:</span> </td>
+                <td> 
+                    <mat-form-field appearance="fill">
+                        <input matInput [type]="hide2 ? 'password' : 'text'" formControlName="password2">
+                        <button class="btn__icon" type="button" mat-icon-button matSuffix (click)="hide2 = !hide2" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                            <mat-icon>{{hide2 ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        </button>
+                    </mat-form-field>
+                    <span class="auth__err" *ngIf="regForm.controls['password2'].invalid && regForm.controls['password2'].touched || checkPassword == true">Повторите пароль!</span>
                 </td>
             </tr>
             <tr>
