--- a/src/app/auth/components/register/register.component.scss
+++ b/src/app/auth/components/register/register.component.scss
@@ -1,5 +1,5 @@
 .auth {
-    width: 450px;
+    width: 470px;
     border: 1px solid #ccc;
     border-radius: 5px;
     padding: 20px 30px;
@@ -34,5 +34,10 @@ td {
     width: 228px;
     height: 29px;
     font-size: 16px;
+    cursor: pointer;
+}
+.btn__icon {
+    border: none;
+    background: none;
     cursor: pointer;
 }
