--- a/src/app/main/components/user/user.component.html
+++ b/src/app/main/components/user/user.component.html
@@ -1,5 +1,8 @@
 <div class="container">
     <p class="title">Привет {{mydata.first_name}} {{mydata.last_name}}!</p>
+    <p class="text">Телефон: {{mydata.phone_number}}</p>
+    <p class="text">Почта: {{mydata.email}}</p>
+    <button class="btn" [routerLink]="['../user-change']">Изменить данные</button>
     <button class="btn" (click)="logout($event)">Выйти из системы</button>
     <p class="subtitle">Free Team Games 1.1</p>
 </div>
