--- a/src/app/main/components/user-change/user-change.component.html
+++ b/src/app/main/components/user-change/user-change.component.html
@@ -19,8 +19,8 @@
             <tr>
                 <td> <span class="subtitle">E-mail:</span> </td>
                 <td> 
-                    <input class="input" formControlName="username"> 
-                    <span class="err" *ngIf="changeForm.controls['username'].invalid && changeForm.controls['username'].touched">Введите e-mail!</span>
+                    <input class="input" formControlName="email"> 
+                    <span class="err" *ngIf="changeForm.controls['email'].invalid && changeForm.controls['email'].touched">Введите e-mail!</span>
                 </td>
             </tr>
             <tr>
@@ -28,6 +28,12 @@
                 <td> 
                     <input class="input" formControlName="phone_number"> 
                     <span class="err" *ngIf="changeForm.controls['phone_number'].invalid && changeForm.controls['phone_number'].touched">Введите телефон!</span>
+                </td>
+            </tr>
+            <tr>
+                <td> <span class="subtitle">Пароль:</span> </td>
+                <td> 
+                    <button class="btn" [routerLink]="['../change-password']" type="button">Изменить пароль</button>
                 </td>
             </tr>
             <tr>
