--- a/src/app/main/components/header/header.component.html
+++ b/src/app/main/components/header/header.component.html
@@ -1,21 +1,44 @@
-<div class="header">
-    <div class="logo">
-        <img src="../../../../assets/img/game1.png" alt="logo">
-    </div>
+<ng-sidebar-container style="overflow: hidden;">
+    <ng-sidebar [opened]="opened" position="top">
+        <ul class="burger__ul">
+            <li (click)='toggleSidebar()' class="burger__li"><a [routerLink]="['./home']" class="burger__a">Главная</a></li>
+            <li (click)='toggleSidebar()' class="burger__li"><a [routerLink]="['./teams']" class="burger__a">Команды</a></li>
+            <li (click)='toggleSidebar()' class="burger__li"><a [routerLink]="['./locations']" class="burger__a">Места</a></li>
+            <li (click)='toggleSidebar()' class="burger__li"><a [routerLink]="['./history']" class="burger__a">История</a></li>
+            <li (click)='toggleSidebar()' class="burger__li"><a [routerLink]="['./about-us']" class="burger__a">О нас</a></li>
+        </ul>
+        </ng-sidebar>
 
-    <div>
-        <a routerLinkActive="active" class="link" [routerLink]="['./home']">Главная</a>
-        <a routerLinkActive="active" class="link" [routerLink]="['./teams']">Команды</a>
-        <a routerLinkActive="active" class="link" [routerLink]="['./locations']">Места</a>
-        <a routerLinkActive="active" class="link" [routerLink]="['./history']">История</a>
-        <a routerLinkActive="active" class="link" [routerLink]="['./about-us']">О нас</a>
-    </div>
+        <div ng-sidebar-content>
+        <button (click)='toggleSidebar()' class="burger">
+            <span [ngClass]="{'burger__line1': !opened, 'burger__line1_active': opened}"></span>
+            <span [ngClass]="{'burger__line2': !opened, 'burger__line2_active': opened}"></span>
+            <span [ngClass]="{'burger__line3': !opened, 'burger__line3_active': opened}"></span>
+            <span [ngClass]="{'burger__line4': !opened, 'burger__line4_active': opened}"></span>
+        </button>
 
-    <div class="box">
-        <a [routerLink]="['./user']"><div class="avatar"></div></a>
-    </div>
-</div>
+        <div class="header">
+            <div class="logo">
+                <img src="../../../../assets/img/game1.png" alt="logo">
+            </div>
+        
+            <div>
+                <a routerLinkActive="active" class="link" [routerLink]="['./home']">Главная</a>
+                <a routerLinkActive="active" class="link" [routerLink]="['./teams']">Команды</a>
+                <a routerLinkActive="active" class="link" [routerLink]="['./locations']">Места</a>
+                <a routerLinkActive="active" class="link" [routerLink]="['./history']">История</a>
+                <a routerLinkActive="active" class="link" [routerLink]="['./about-us']">О нас</a>
+            </div>
+        
+            <div class="box">
+                <a [routerLink]="['./user']"><div class="avatar"></div></a>
+            </div>
+        </div>
 
-<div class="router-outlet">
-    <router-outlet></router-outlet>
-</div>
+      
+        <div class="router-outlet">
+            <router-outlet></router-outlet>
+        </div>
+
+    </div>
+</ng-sidebar-container>
