create adaptiv main pages

--- a/src/app/main/components/about-us/about-us.component.html
+++ b/src/app/main/components/about-us/about-us.component.html
@@ -2,7 +2,7 @@
     <p class="title">О нас</p>
     <p class="subtitle">Каждый может найти свою команду</p>
 
-    <div style="display: flex">
+    <div class="box__cell">
         <div class="cell">
             <div class="avatar__mr"></div>
             <div>
