--- a/src/app/main/components/header/header.component.html
+++ b/src/app/main/components/header/header.component.html
@@ -6,6 +6,7 @@
             <li (click)='toggleSidebar()' class="burger__li"><a [routerLink]="['./locations']" class="burger__a">Места</a></li>
             <li (click)='toggleSidebar()' class="burger__li"><a [routerLink]="['./history']" class="burger__a">История</a></li>
             <li (click)='toggleSidebar()' class="burger__li"><a [routerLink]="['./about-us']" class="burger__a">О нас</a></li>
+            <li (click)='toggleSidebar()' class="burger__li"><a [routerLink]="['./user']" class="burger__a">Профиль</a></li>
         </ul>
         </ng-sidebar>
 
@@ -18,9 +19,7 @@
         </button>
 
         <div class="header">
-            <div class="logo">
-                <img src="../../../../assets/img/game1.png" alt="logo">
-            </div>
+            <div class="logo"></div>
         
             <div>
                 <a routerLinkActive="active" class="link" [routerLink]="['./home']">Главная</a>
