--- a/src/app/main/components/header/header.component.scss
+++ b/src/app/main/components/header/header.component.scss
@@ -14,9 +14,12 @@ $dark: #003249;
     box-shadow: 0px 0px 10px rgba(0,0,0,.8);
 }
 .logo {
-    display: flex;
-    align-items: center;
     width: 200px;
+    height: 70px;
+    background-image: url(../../../../assets/img/game1.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 .link {
     text-decoration: none;
@@ -206,4 +209,14 @@ ng-sidebar-container {
     transform: rotate(-45deg);
     transform-origin: 5%;
     transition: transform 0.5s;
+}
+@media(max-width: 500px) {
+    .logo {
+        width: 100px;
+        height: 50px;
+    }
+    .burger {
+        top: 20px;
+        right: 20px;
+    }
 }
