--- a/src/app/main/components/user/user.component.scss
+++ b/src/app/main/components/user/user.component.scss
@@ -40,3 +40,13 @@ $dark: #003249;
     color: $dark;
     padding-bottom: 10px;
 }
+@media(max-width: 700px) {
+    .container {
+        width: 280px;
+        padding: 20px 0;
+    }
+    td {
+        padding: 5px 5px;
+        font-size: 15px;
+    }
+}
