--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -1,39 +1,40 @@
-<div class="auth">
+<div class="container">
     <p class="auth__title">Регистрация</p>
     <form [formGroup]="regForm" novalidate (ngSubmit)="checkForm()">
         <table>
             <tr>
-                <td> <span class="auth__subtitle">Имя:</span> </td>
+                <td class="td__title"> <span class="auth__subtitle">Имя:</span> </td>
                 <td> 
-                    <input class="auth__input" formControlName="first_name"> 
+                    <input class="auth__input" formControlName="first_name" placeholder="Имя"> 
                     <span class="auth__err" *ngIf="regForm.controls['first_name'].invalid && regForm.controls['first_name'].touched">Введите имя!</span>
                 </td>
             </tr>
             <tr>
-                <td> <span class="auth__subtitle">Фамилия:</span> </td>
+                <td class="td__title"> <span class="auth__subtitle">Фамилия:</span> </td>
                 <td> 
-                    <input class="auth__input" formControlName="last_name"> 
+                    <input class="auth__input" formControlName="last_name" placeholder="Фамилия"> 
                     <span class="auth__err" *ngIf="regForm.controls['last_name'].invalid && regForm.controls['last_name'].touched">Введите фамилию!</span>
                 </td>
             </tr>
             <tr>
-                <td> <span class="auth__subtitle">E-mail:</span> </td>
+                <td class="td__title"> <span class="auth__subtitle">E-mail:</span> </td>
                 <td> 
-                    <input class="auth__input" formControlName="email"> 
+                    <input class="auth__input" formControlName="email" placeholder="E-mail"> 
                     <span class="auth__err" *ngIf="regForm.controls['email'].invalid && regForm.controls['email'].touched">Введите e-mail!</span>
                 </td>
             </tr>
             <tr>
-                <td> <span class="auth__subtitle">Телефон:</span> </td>
+                <td class="td__title"> <span class="auth__subtitle">Телефон:</span> </td>
                 <td> 
-                    <input class="auth__input" formControlName="phone_number"> 
+                    <input class="auth__input" formControlName="phone_number" placeholder="Телефон"> 
                     <span class="auth__err" *ngIf="regForm.controls['phone_number'].invalid && regForm.controls['phone_number'].touched">Введите телефон!</span>
                 </td>
             </tr>
             <tr>
-                <td> <span class="auth__subtitle">Придумайте пароль:</span> </td>
+                <td class="td__title"> <span class="auth__subtitle">Придумайте пароль:</span> </td>
                 <td> 
                     <mat-form-field appearance="fill">
+                        <mat-label>Придумайте пароль</mat-label>
                         <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
                         <button class="btn__icon" type="button" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                             <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
@@ -43,9 +44,10 @@
                 </td>
             </tr>
             <tr>
-                <td> <span class="auth__subtitle">Повторите пароль:</span> </td>
+                <td class="td__title"> <span class="auth__subtitle">Повторите пароль:</span> </td>
                 <td> 
                     <mat-form-field appearance="fill">
+                        <mat-label>Повторите пароль</mat-label>
                         <input matInput [type]="hide2 ? 'password' : 'text'" formControlName="password2">
                         <button class="btn__icon" type="button" mat-icon-button matSuffix (click)="hide2 = !hide2" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                             <mat-icon>{{hide2 ? 'visibility_off' : 'visibility'}}</mat-icon>
@@ -54,14 +56,18 @@
                     <span class="auth__err" *ngIf="regForm.controls['password2'].invalid && regForm.controls['password2'].touched || checkPassword == true">Повторите пароль!</span>
                 </td>
             </tr>
-            <tr>
+            <!-- <tr>
                 <td>
                     <button class="auth__btn" [routerLink]="['../login']" type="button">Войти</button>
                 </td>
                 <td> 
                     <button class="auth__btn" [disabled]="regForm.invalid || regForm.disabled">Зарегестрироваться</button>
                 </td>
-            </tr>
+            </tr> -->
         </table>
+        <div style="display: flex; flex-wrap: wrap;">
+            <button class="auth__btn" [routerLink]="['../login']" type="button">Войти</button> 
+            <button class="auth__btn" [disabled]="regForm.invalid || regForm.disabled">Зарегестрироваться</button>
+        </div>
     </form>
 </div>
