--- a/src/app/main/components/add-event/add-event.component.scss
+++ b/src/app/main/components/add-event/add-event.component.scss
@@ -3,7 +3,7 @@ $light: #f1f1f1;
 $turquoise: #80CED7;
 $blue: #007EA7;
 $dark: #003249;
-.add-event {
+.container {
     width: 350px;
     border: 1px solid $grey;
     border-radius: 5px;
@@ -47,4 +47,17 @@ td {
 }
 .add-event__btn:hover {
     background: $grey;
+}
+@media(max-width: 700px) {
+    .container {
+        width: 280px;
+        padding: 20px 0;
+    }
+    td {
+        padding: 5px 5px;
+        font-size: 15px;
+    }
+    .td__title {
+        display: none;
+    }
 }
