--- a/src/app/main/components/change-password/change-password.component.html
+++ b/src/app/main/components/change-password/change-password.component.html
@@ -3,9 +3,10 @@
     <form [formGroup]="changeForm" novalidate (ngSubmit)="checkForm()">
         <table>
             <tr>
-                <td> <span class="auth__subtitle">Новый пароль:</span> </td>
+                <td class="td__title"> <span class="auth__subtitle">Новый пароль:</span> </td>
                 <td> 
                     <mat-form-field appearance="fill">
+                        <mat-label>Новый пароль</mat-label>
                         <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
                         <button class="btn__icon" type="button" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                             <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
@@ -15,9 +16,10 @@
                 </td>
             </tr>
             <tr>
-                <td> <span class="auth__subtitle">Повторите новый пароль:</span> </td>
+                <td class="td__title"> <span class="auth__subtitle">Повторите пароль:</span> </td>
                 <td> 
                     <mat-form-field appearance="fill">
+                        <mat-label>Повторите пароль</mat-label>
                         <input matInput [type]="hide2 ? 'password' : 'text'" formControlName="password2">
                         <button class="btn__icon" type="button" mat-icon-button matSuffix (click)="hide2 = !hide2" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                             <mat-icon>{{hide2 ? 'visibility_off' : 'visibility'}}</mat-icon>
@@ -26,14 +28,18 @@
                     <span class="err" *ngIf="changeForm.controls['password2'].invalid && changeForm.controls['password2'].touched || checkPassword == true">Повторите пароль!</span>
                 </td>
             </tr>
-            <tr>
+            <!-- <tr>
                 <td>
                     <button class="btn" [routerLink]="['../user']" type="button">Отмена</button>
                 </td>
                 <td> 
                     <button class="btn" [disabled]="changeForm.invalid || changeForm.disabled">Изменить</button>
                 </td>
-            </tr>
+            </tr> -->
         </table>
+        <div style="display: flex; flex-wrap: wrap;">
+            <button class="btn" [routerLink]="['../user']" type="button">Отмена</button> 
+            <button class="btn" [disabled]="changeForm.invalid || changeForm.disabled">Изменить</button>
+        </div>
     </form>
 </div>
