--- a/src/app/main/components/players/players.component.scss
+++ b/src/app/main/components/players/players.component.scss
@@ -54,3 +54,16 @@ td {
     color: $dark;
     font-size: 20px;
 }
+@media(max-width: 700px) {
+    .container {
+        width: 280px;
+        padding: 20px 0;
+    }
+    td {
+        padding: 5px 5px;
+        font-size: 15px;
+    }
+    .subtitle {
+        font-size: 15px;
+    }
+}
