--- a/src/app/main/components/history/history.component.html
+++ b/src/app/main/components/history/history.component.html
@@ -6,20 +6,22 @@
     </div>
     <table>
         <tr class="tr__head">
+            <td>Вид спорта</td>
+            <td>Тип события</td>
             <td>Время</td>
             <td>Место</td>
             <td>Цена</td>
             <td>Кол-во игроков</td>
+            <td>Статус</td>
         </tr>
         <tr class="tr" *ngFor="let event of events?.results">
-            <!-- <td [routerLink]="['../event', event.id]">{{event.time_start | date: 'dd.MM.YYYY HH:mm'}}</td>
-            <td [routerLink]="['../event', event.id]">{{event.location.name}}</td>
-            <td [routerLink]="['../event', event.id]">{{event.price}}</td>
-            <td [routerLink]="['../event', event.id]">{{event.players_count}}</td> -->
+            <td>{{event.kind}}</td>
+            <td>{{event.type}}</td>
             <td>{{event.time_start | date: 'dd.MM.YYYY HH:mm'}}</td>
             <td>{{event.location.name}}</td>
             <td>{{event.price}}</td>
             <td>{{event.players_count}}</td>
+            <td>{{event.status}}</td>
         </tr>
     </table>
 </div>
